// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/IconButton IconButton Playground 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-ckoex8-IconButton"
        color=""
        data-testid="icon-button"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-8vh3ja-Icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Sizes 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1djdxs6-IconButton"
        color=""
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-14m0jd5-Icon"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-ax64xp-IconButton"
        color=""
        data-testid="icon-button"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-14m0jd5-Icon"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1ebdi7o-IconButton"
        color=""
        data-testid="icon-button"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-14m0jd5-Icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/IconButton IconButton Types 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-1djdxs6-IconButton"
        color=""
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-14m0jd5-Icon"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-vor3dd-IconButton"
        color=""
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-1k5aruc-Icon"
          />
        </span>
      </button>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <button
        className="css-r0u29a-IconButton"
        color=""
        data-testid="icon-button-size-lg"
        disabled={false}
      >
        <span
          className="css-1gnbc76-Icon"
          onClick={[Function]}
        >
          <span
            className="css-14m0jd5-Icon"
          />
        </span>
      </button>
    </div>
  </div>
</div>
`;
